<resources>
    <string name="app_name">JTIA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_about_us">aboutUsActivity</string>


    <string name="guided_tour">Guided Tour</string>
    <string name="events">Events</string>
    <string name="visit">Visit</string>
    <string name="heritage_lodge">Heritage Lodge</string>
    <string name="venue_hire">Venue Hire</string>
    <string name="e_shop">E-Shop</string>
    <string name="donation">Donation</string>
    <string name="map">Map</string>

    <string name="switch_language">Switch Language</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="lanugage">lanugage</string>
    <string name="others">Others</string>
    <string name="welcome_to_jtia">Welcome to JTIA</string>
</resources>
